<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imetro_behavior</name>
  <version>1.0.0</version>
  <description>
    PyTrees based behavior tree tooling for iMETRO.
  </description>
  <maintainer email="sebastian.a.castrofernandez@nasa.gov">Sebastian Castro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>py_trees_ros_viewer</exec_depend>
  <exec_depend>imetro_behavior_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
